--- a/hrea_amazon_encoder_visual.ipynb
+++ b/hrea_amazon_encoder_visual.ipynb
@@ -38,7 +38,7 @@
     "model_name = 'encoder.pth'\n",
     "print(model_name)\n",
     "\n",
-    "# 2. set the seed and GPU\n",
+    "# 2. 设置种子seed和CPU\n",
     "def set_seed(seed):\n",
     "    np.random.seed(seed)\n",
     "    torch.manual_seed(seed)\n",
@@ -54,7 +54,7 @@
     "device = torch.device(\"cpu\") if not torch.cuda.is_available() else torch.device(\"cuda\")\n",
     "print(\"Using device\", device)\n",
     "\n",
-    "# 3. dataset\n",
+    "# 3. 数据集\n",
     "# --- serialization ---\n",
     "print(\"  serialization...\")\n",
     "\n",
@@ -76,8 +76,8 @@
     "\n",
     "dataloader = DataLoader(dataset, batch_size=100, drop_last=True)\n",
     "\n",
-    "# loading trained model\n",
-    "model = torch.load(f'{model_name}')       # pretrained encoder\n",
+    "# 加载训练好的模型\n",
+    "model = torch.load(f'{model_name}')       # 预训练的自编码器\n",
     "encoder = model.module.encoder.to(device)\n",
     "# encoder = nn.DataParallel(encoder.to(device))\n",
     "\n",
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "#visulization using t-sne\n",
+    "#使用t-sne进行可视化\n",
     "print('t-sne...')\n",
     "from sklearn.manifold import TSNE\n",
     "X_r = TSNE(n_components=2, learning_rate='auto', init='random', perplexity=3).fit_transform(X)\n",
